z-index fix

--- a/_layouts/style.css
+++ b/_layouts/style.css
@@ -1977,7 +1977,7 @@ ul.main {
 
 /*Tickets*/
 #group10 {
-    z-index: 1; 
+    z-index: 5; 
     height: 600px;
 }
 
@@ -2024,7 +2024,7 @@ ul.main {
 /*FAQ*/
 
 #group14 {
-    z-index: 4;
+    z-index: 5;
     height: 200px;
 }
 
